--- a/src/app/global/device-list/device-list.component.html
+++ b/src/app/global/device-list/device-list.component.html
@@ -33,8 +33,8 @@
                                                 (click)="saveOldVal(device)"
                                                 [(ngModel)]="device.location"
                                                 >
-                                                <option  value="none" selected> -- Select Device Location -- </option>
-                                                <option *ngFor="let location of getLocationList() ; let i = index"
+                                                <option value="none" selected> -- Select Location -- </option>
+                                                <option *ngFor="let location of updatedLocationList ; let i = index"
                                                     [ngValue]=location.id
                                                     [disabled]="location.isDisabled">
                                                     {{location.name}}
@@ -104,7 +104,7 @@
                                                     <select class="form-control">
                                                         <option value="none" selected disabled hidden>Select
                                                             Team</option>
-                                                        <option [value]="team.name"
+                                                        <option [value]="team.id"
                                                             *ngFor="let team of teamsAvaliable; let i = index">
                                                             {{team.name}}</option>
                                                     </select>
