--- a/src/app/global/device-list/device-list.component.html
+++ b/src/app/global/device-list/device-list.component.html
@@ -4,8 +4,8 @@
             <div class="modal-header">
                 <h5 *ngIf="mode == 'createMode'" class="modal-title" id="exampleModalLabel">Configure nodes for this
                     game mode.</h5>
-                <h5 *ngIf="mode == 'activeNodes'" class="modal-title" id="exampleModalLabel">Active Game Nodes.</h5>
-                <h5 *ngIf="mode == 'adminNodes'" class="modal-title" id="exampleModalLabel">Admin Nodes.</h5>
+                <h5 *ngIf="mode == 'activeNodes'" class="modal-title" id="exampleModalLabel">Control Nodes</h5>
+                <!-- <h5 *ngIf="mode == 'adminNodes'" class="modal-title" id="exampleModalLabel">Admin Nodes.</h5> -->
 
             </div>
             <div class="modal-body">
