--- a/src/app/global/device-list/device-list.component.html
+++ b/src/app/global/device-list/device-list.component.html
@@ -128,10 +128,10 @@
                                                 <div class="form-group">
                                                     <label for="medicTime">Time to Medic</label>
                                                     <input class="form-control-range" type="range" min="0"
-                                                    max="11" [value]="getTimeIndex(device.med_time)" step="1"
+                                                    max="11" [value]="getTimeIndex(device.medic.medTime)" step="1"
                                                     (change)="medicTime(device,$event.target.value, true)"
                                                     (input)="medicTime(device, $event.target.value, false)">
-                                                    {{convertTime(device.medTime)}}
+                                                    {{convertTime(device.medic.medTime)}}
                                                 </div>
                                             </div>
                                         </div>
@@ -234,10 +234,10 @@
                                                         <div class="form-group">
                                                             <label for="capmedicTime">Time to Medic</label>
                                                             <input class="form-control-range" type="range" min="0"
-                                                            max="11" [value]="getTimeIndex(device.med_time)" step="1"
+                                                            max="11" [value]="getTimeIndex(device.medic.medTime)" step="1"
                                                             (change)="medicTime(device,$event.target.value, true)"
                                                             (input)="medicTime(device,$event.target.value, false)">
-                                                            {{convertTime(device.medTime)}}
+                                                            {{convertTime(device.medic.medTime)}}
                                                         </div>
                                                     </div>
                                                 </div>
