--- a/src/app/secure/start-game/start-game.component.html
+++ b/src/app/secure/start-game/start-game.component.html
@@ -7,7 +7,7 @@
                     <h4>To Being Select Game Mode</h4>
                     <select class="form-control" (change)="changeGame($event)">
                         <option disabled selected value> -- Select to Start Game -- </option>
-                        <option [value]="gameMode.description" *ngFor="let gameMode of gameModes">
+                        <option [value]=gameMode.id *ngFor="let gameMode of gameModes">
                             {{gameMode.description}}</option>
                     </select>
                     <br>
@@ -16,7 +16,7 @@
             </div>
         </div>
         <div class="row collapsible" [@collapse]="!gameBoardCollapsed" id="gameManagementBoard">
-            <div class="col-lg-12"><h4 class="text-center pt-3">{{selectedGameMode}}</h4></div> 
+            <div class="col-lg-12"><h4 class="text-center pt-3">{{getSelectedGameModeName()}}</h4></div>
 
             <div class="col-lg-12">
                 <div class="text-center pt-3">
@@ -27,6 +27,6 @@
                 </div>
             </div>
         </div>
-        
+
     </div>
-</div> 
+</div>
