leave team option disabled if not team.id available

--- a/src/app/global/device-list/device-list.component.html
+++ b/src/app/global/device-list/device-list.component.html
@@ -112,6 +112,7 @@
                                                             [(ngModel)]="device.registerPlayer.teamID">
                                                         <option disabled hidden>Select Team</option>
                                                         <option [value]=team.id
+                                                                [disabled]=!team.id
                                                                 *ngFor="let team of teamsAvaliable; let i = index"
                                                                 [selected]="i == 0">
                                                                 {{team?.name}}
