just disable the entire switch if no team.id available

--- a/src/app/global/device-list/device-list.component.html
+++ b/src/app/global/device-list/device-list.component.html
@@ -98,7 +98,7 @@
                                         <div class="custom-control custom-switch">
                                             <input (click)="enableRegister(device)" type="checkbox"
                                                 class="custom-control-input" [id]="'registerSwitch-' + i"
-                                                [disabled]="device.registerPlayer.enabled"
+                                                [disabled]="device.registerPlayer.enabled || !teamsAvaliable[0].id"
                                                 [checked]="device.registerPlayer.enabled">
                                             <label class="custom-control-label" [for]="'registerSwitch-' + i">Register
                                                 Team</label>
